--- a/index.html
+++ b/index.html
@@ -72,5 +72,8 @@
         </section>
       </main>
     </div>
+    <footer>
+      Feito com <img src="assets/heart.svg" alt=""> pela Rocketseat
+    </footer>
   </body>
 </html>
